refactor: do not recompute cnossosPaths for every period