@@ -15,7 +15,6 @@ import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.CoordinateSequence;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
-import org.locationtech.jts.geom.LineSegment;
 import org.noise_planet.noisemodelling.pathfinder.path.Scene;
 import org.noise_planet.noisemodelling.pathfinder.utils.geometry.CurvedProfileGenerator;
 import org.noise_planet.noisemodelling.pathfinder.utils.geometry.JTSUtility;
@@ -51,10 +50,6 @@ public class CutProfile {
     public boolean curvedPath = false;
 
     public PROFILE_TYPE profileType = PROFILE_TYPE.DIRECT;
-
-    /**
-    *  Orientation sourceOrientation = new Orientation(0,0,0); */
-    public Orientation raySourceReceiverDirectivity = new Orientation(); // direction of the source->receiver path relative to the source heading
 
     /**
      * Empty constructor for deserialization
@@ -106,7 +101,7 @@ public class CutProfile {
     /**
      * Insert and sort cut points,
      * @param sortBySourcePosition After inserting points, sort the by the distance from the source
-     * @param cutPointsToInsert
+     * @param cutPointsToInsert Points to insert
      */
     public void insertCutPoint(boolean sortBySourcePosition, CutPoint... cutPointsToInsert) {
         CutPointSource sourcePoint = getSource();
@@ -118,7 +113,7 @@ public class CutProfile {
             int sourceIndex = cutPoints.indexOf(sourcePoint);
             if (sourceIndex != 0) {
                 cutPoints.remove(sourceIndex);
-                cutPoints.add(0, sourcePoint);
+                cutPoints.addFirst(sourcePoint);
             }
             // move receiver as the last point
             int receiverIndex = cutPoints.indexOf(receiverPoint);
@@ -138,8 +133,8 @@ public class CutProfile {
 
     /**
      * compute the path between two points
-     * @param p0
-     * @param p1
+     * @param p0 Point 0
+     * @param p1 Point 1
      * @return the absorption coefficient of this path
      */
     @JsonIgnore
@@ -177,7 +172,7 @@ public class CutProfile {
     @JsonIgnore
     public double getGPath() {
         if(!cutPoints.isEmpty()) {
-            return getGPath(cutPoints.get(0), cutPoints.get(cutPoints.size() - 1), Scene.DEFAULT_G_BUILDING);
+            return getGPath(cutPoints.getFirst(), cutPoints.getLast(), Scene.DEFAULT_G_BUILDING);
         } else {
             return 0;
         }
@@ -330,7 +325,7 @@ public class CutProfile {
         // Filter out points that are below the line segment
         List<Coordinate> convexHullInput = new ArrayList<>();
         // Add source position
-        convexHullInput.add(coordinates2d.get(0));
+        convexHullInput.add(coordinates2d.getFirst());
         // Add valid diffraction point, building/walls/dem
         for (int idPoint=1; idPoint < cutPoints.size() - 1; idPoint++) {
             CutPoint currentPoint = cutPoints.get(idPoint);
@@ -342,7 +337,7 @@ public class CutProfile {
             }
         }
         // Add receiver position
-        convexHullInput.add(coordinates2d.get(coordinates2d.size() - 1));
+        convexHullInput.add(coordinates2d.getLast());
 
         // Compute the convex hull using JTS
         List<Coordinate> convexHullPoints = new ArrayList<>();
@@ -351,8 +346,8 @@ public class CutProfile {
             Coordinate[] coordsArray = convexHullInput.toArray(new Coordinate[0]);
             ConvexHull convexHull = new ConvexHull(coordsArray, geomFactory);
             Coordinate[] convexHullCoords = convexHull.getConvexHull().getCoordinates();
-            int indexFirst = Arrays.asList(convexHull.getConvexHull().getCoordinates()).indexOf(coordinates2d.get(0));
-            int indexLast = Arrays.asList(convexHull.getConvexHull().getCoordinates()).lastIndexOf(coordinates2d.get(coordinates2d.size() - 1));
+            int indexFirst = Arrays.asList(convexHull.getConvexHull().getCoordinates()).indexOf(coordinates2d.getFirst());
+            int indexLast = Arrays.asList(convexHull.getConvexHull().getCoordinates()).lastIndexOf(coordinates2d.getLast());
             if(indexFirst == -1 || indexLast == -1 || indexFirst > indexLast) {
                 throw new IllegalArgumentException("Wrong input data ");
             }
@@ -483,26 +478,18 @@ public class CutProfile {
 
     @JsonIgnore
     public CutPointSource getSource() {
-        return !cutPoints.isEmpty() && cutPoints.get(0) instanceof CutPointSource ?
-                (CutPointSource) cutPoints.get(0) : null;
+        return !cutPoints.isEmpty() && cutPoints.getFirst() instanceof CutPointSource ?
+                (CutPointSource) cutPoints.getFirst() : null;
     }
 
     @JsonIgnore
     public CutPointReceiver getReceiver() {
-        return !cutPoints.isEmpty() && cutPoints.get(cutPoints.size() - 1) instanceof CutPointReceiver ?
-                (CutPointReceiver) cutPoints.get(cutPoints.size() - 1) : null;
+        return !cutPoints.isEmpty() && cutPoints.getLast() instanceof CutPointReceiver ?
+                (CutPointReceiver) cutPoints.getLast() : null;
     }
     @JsonIgnore
     public Orientation getSourceOrientation() {
         return this.getSource().orientation;
-    }
-
-    public Orientation getRaySourceReceiverDirectivity() {
-        return raySourceReceiverDirectivity;
-    }
-
-    public void setRaySourceReceiverDirectivity(Orientation raySourceReceiverDirectivity) {
-        this.raySourceReceiverDirectivity = raySourceReceiverDirectivity;
     }
 
 }
